Remove Java 9 support
To align with Oracle's support policy, this commit only keeps Java 8 and
10. This effectively removes 1.7 as well.

Closes gh-662

--- a/initializr-docs/src/main/asciidoc/user-guide.adoc
+++ b/initializr-docs/src/main/asciidoc/user-guide.adoc
@@ -142,7 +142,7 @@ https://start.spring.io/#!language=kotlin&type=gradle-project
 The following attributes are supported:
 
 * Programming language: `language` (`java`, `groovy` or `kotlin`)
-* Java version: `javaVersion` (`1.6`, `1.7`, `1.8`)
+* Java version: `javaVersion` (`1.8`, `10`)
 * Project type: `type` (`maven-project`, `gradle-project`)
 * Packaging: `packaging` (`jar`, `war`)
 * Group: `groupId`
