Move initializr-docs to docs profile
This commit disables the `initializr-docs` module unless the `docs` or
`full` profile is active. It is a follow-up of e3d9c3c7837 that can lead
to failure with an empty repo as tests in `initializr-docs` are
attempting to resolve the snippets.

See gh-665

--- a/README.adoc
+++ b/README.adoc
@@ -36,7 +36,8 @@ in many environments (including embedded in your own project)
 * `initializr-web`: REST endpoints and web interface
 * `initializr-actuator`: optional module to provide statistics and metrics on project
 generation
-* `initializr-docs`: documentation
+* `initializr-docs`: documentation (not enabled by default, enable the `docs` profile
+in your IDE)
 
 `initializr-service` is an additional module that represents the production instance
 that is available at link:https://start.spring.io[]. It is not enabled by default but
